# self_customer_system

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  start.bat  start.sh
docs/: 01-architecture-overview.md  02-scenario-deep-dive.md  03-orchestration-design.md  04-frontend-design.md
prototype/: index.html
scripts/: demo.py  run_server.py  test.sh
src/: pipeline.py
src/common/: models.py  observability.py
src/config/: model_providers.py  settings.py
src/execution/: mcp_tools.json  rag.py  recommend.py  tool_gateway.py  vector_store.py
src/feedback/: memory.py
src/gateway/: api.py
src/input/: processor.py
src/intent/: engine.py
src/planning/: dag_engine.py
src/reasoning/: model_router.py
tests/: test_all.py
